# SafetyDiff

./: .gitignore  README.md  implementation.md  pyproject.toml  safety_diff_report.md
docs/: product_direction.md
examples/: asrt_run_new.json  asrt_run_old.json
safetydiff/: __init__.py  __main__.py  auto_runner.py  cli.py  diff.py  loader.py  report.py  schema.py
